@@ -37,6 +37,9 @@ not yet  BJH  Release 10.68.00
               Build: fix build failure on SCO OpenServer due to SIGURG not
               existing.  Broken in Netpbm 10.49 (December 2009).
 
+              Build: Declare _XOPEN_SOURCE >= 500 in source files that use
+              strdup.
+
 14.06.29 BJH  Release 10.67.00
 
               sgitopnm: add ability to convert 2-channel SGI image.
